# bookstore

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
bookstore/: pyproject.toml  settings.py
bookstore/bookstore/: settings.py  urls.py
bookstore/order/serializers/: order_serializer.py
bookstore/order/tests/test_serializers/: test_order_serializer.py
bookstore/order/tests/test_viewsets/: test_order_viewset.py
bookstore/product/migrations/: 0001_initial.py
bookstore/product/models/: category.py
bookstore/product/serializers/: product_serializer.py
bookstore/product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
bookstore/product/tests/test_viewsets/: test_product_viewset.py
bookstore/product/viewsets/: category_viewset.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/models/: category.py  product.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py
