[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["lucas <lucas@teste.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
django = "<5.0"
djangorestframework = ">=3.16.1,<4.0.0"
django-rest-framework = ">=0.1.0,<0.2.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=6.0.0,<7.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
whitenoise = "^6.6.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
factory-boy = ">=3.3.3,<4.0.0"
pytest-django = ">=4.11.1,<5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"